<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#EBEBEB"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:background="#EDEDED">

        <ImageView
            android:id="@+id/idEmployeeAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_service" />

        <TextView
            android:id="@+id/idEmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="150dp"
            android:layout_toEndOf="@id/idEmployeeAvatar"
            android:fontFamily="@font/noto_sans"
            android:text="@string/service_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idEmployeeAddress"
            android:layout_width="186dp"
            android:layout_height="59dp"
            android:layout_below="@id/idEmployeeName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@id/idEmployeeAvatar"
            android:drawablePadding="2dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/service_description"
            android:textColor="#212528" />

        <TextView
            android:id="@+id/idEmployeePrice"
            android:layout_width="85dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/service_price"
            android:textAlignment="center"
            android:textColor="#38769B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/service_price_description"
            android:textAlignment="center"
            android:textColor="#212528"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
