<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#EBEBEB"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/idEmployeeAvatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/avatar_template"
            android:padding="5dp" />

        <TextView
            android:id="@+id/idEmployeeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="150dp"
            android:layout_toEndOf="@id/idEmployeeAvatar"
            android:fontFamily="@font/noto_sans"
            android:text="@string/card_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idEmployeeAddress"
            android:layout_width="186dp"
            android:layout_height="50dp"
            android:layout_below="@id/idEmployeeName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@id/idEmployeeAvatar"
            android:drawablePadding="2dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/card_address"
            android:textColor="#212528" />

        <TextView
            android:id="@+id/idEmployeePrice"
            android:layout_width="85dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/card_price"
            android:textAlignment="center"
            android:textColor="#38769B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/noto_sans"
            android:text="за 30 мин"
            android:textAlignment="center"
            android:textColor="#212528"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/idEmployeeRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="332dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/card_rating"
            android:textAlignment="viewStart"
            android:textColor="#212528"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="378dp"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/idEmployeeReviewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="63dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/card_reviews"
            android:textAlignment="center"
            android:textColor="#62849D"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idAnimalTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-150dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/idEmployeeName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idOrderTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/idEmployeeAvatar" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="82sp"
            app:srcCompat="@drawable/ic_launcher_foreground" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
