<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".main_menu_activity.MainMenuActivity">

    <RelativeLayout
        android:id="@+id/idDogSitterOrder"
        style="@style/spinner_filter_style"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDogFurloughOrder"
        app:layout_constraintVertical_bias="0.04">

        <ImageView
            android:id="@+id/idOrderName5"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:contentDescription="@string/app_name"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_sitter" />

        <TextView
            android:id="@+id/idOrderName6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="150dp"
            android:layout_toEndOf="@id/idOrderName5"
            android:fontFamily="@font/noto_sans"
            android:text="Зооняня"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idOrderName7"
            android:layout_width="186dp"
            android:layout_height="59dp"
            android:layout_below="@id/idOrderName6"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@id/idOrderName5"
            android:drawablePadding="2dp"
            android:fontFamily="@font/noto_sans"
            android:text="Ситтер поживёт с Вашим питомцем, пока Вы в отъезде"
            android:textColor="#212528" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/noto_sans"
            android:text="за визит"
            android:textAlignment="center"
            android:textColor="#212528"
            android:textSize="14sp" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/noto_sans"
            android:text="от 300 ₽"
            android:textAlignment="center"
            android:textColor="#38769B"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/idDogFurloughOrder"
        style="@style/spinner_filter_style"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDogWalkingOrder"
        app:layout_constraintVertical_bias="0.025">

        <ImageView
            android:id="@+id/idOrderName2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_furlough" />

        <TextView
            android:id="@+id/idOrderName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="150dp"
            android:layout_toEndOf="@id/idOrderName2"
            android:fontFamily="@font/noto_sans"
            android:text="Передержка"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idOrderName4"
            android:layout_width="186dp"
            android:layout_height="59dp"
            android:layout_below="@id/idOrderName3"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@id/idOrderName2"
            android:drawablePadding="2dp"
            android:fontFamily="@font/noto_sans"
            android:text="Ситтер поживёт с Вашим питомцем, пока Вы в отъезде"
            android:textColor="#212528" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/noto_sans"
            android:text="от 200 ₽"
            android:textAlignment="center"
            android:textColor="#38769B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/noto_sans"
            android:text="за сутки"
            android:textAlignment="center"
            android:textColor="#212528"
            android:textSize="14sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/im_back_top" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/im_back_middle" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/im_back_bottom" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_phone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#E9E9E9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_phone" />

<!--        android:elevation="50dp" не работает-->
    <Button
        android:id="@+id/button_city"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#EAEAEA"
        android:fontFamily="@font/noto_sans"
        android:gravity="left|center_vertical"
        android:text="@string/city"
        android:textColor="#393535"
        android:textSize="20dp"
        android:elevation="20dp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_city"
        app:layout_constraintEnd_toEndOf="@id/button_city"
        app:layout_constraintTop_toTopOf="@+id/button_city"
        app:srcCompat="@drawable/ic_right_arrow" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/title_services"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_city" />

    <RelativeLayout
        android:id="@+id/idDogWalkingOrder"
        style="@style/spinner_filter_style"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.025">

        <ImageView
            android:id="@+id/idEmployeeAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_service" />

        <TextView
            android:id="@+id/idEmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="150dp"
            android:layout_toEndOf="@id/idEmployeeAvatar"
            android:fontFamily="@font/noto_sans"
            android:text="Выгул"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idEmployeeAddress"
            android:layout_width="186dp"
            android:layout_height="59dp"
            android:layout_below="@id/idEmployeeName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@id/idEmployeeAvatar"
            android:drawablePadding="2dp"
            android:fontFamily="@font/noto_sans"
            android:text="Выгульщик погуляет с Вашим любимцем, если Вы заняты"
            android:textColor="#212528" />

        <TextView
            android:id="@+id/idEmployeePrice"
            android:layout_width="85dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/noto_sans"
            android:text="от 150 ₽"
            android:textAlignment="center"
            android:textColor="#38769B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/service_price_description"
            android:textAlignment="center"
            android:textColor="#212528"
            android:textSize="14sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_city"
        app:layout_constraintEnd_toEndOf="@id/button_city"
        app:layout_constraintTop_toTopOf="@+id/button_city"
        app:srcCompat="@drawable/ic_right_arrow" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:itemIconSize="50dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>